--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo/vector-icons": "^12.0.1",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.3",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
